--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="res/img/logo/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="res/img/logo/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="res/img/logo/favicon/favicon-16x16.png">
-    <link rel="manifest" href="res/img/logo/favicon/site.webmanifest">
-    <link rel="mask-icon" href="res/img/logo/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="res/logo/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="res/logo/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="res/logo/favicon/favicon-16x16.png">
+    <link rel="manifest" href="res/logo/favicon/site.webmanifest">
+    <link rel="mask-icon" href="res/logo/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!--    <link rel="stylesheet" href="css/icon-fonts.css">-->
     <link rel="stylesheet" href="css/style.css">
-    <title>Ayesha Munawar</title>
+    <title>Pink Lotus</title>
 
 </head>
 <body>
-<h1 class="heading-text">Hello  guys</h1>
+<h1 class="heading-text">Hello guys</h1>
+<p>Its pink lotus</p>
 </body>
 </html>
