--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-<h1 class="heading-text">Hello guys</h1>
-<p>Its pink lotus</p>
+<h1 class="heading-text text-color-pink-2">Pink Lotus</h1>
+<p>Define your style</p>
 </body>
 </html>
