PL> Create styling files for components
PL> Create styling files for components

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
 <h1 class="heading-text text-color-pink-2">Pink Lotus</h1>
-<p>Define your style</p>
+<p>Define your style ...</p>
 </body>
 </html>
