--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="res/logo/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="res/logo/favicon/favicon-16x16.png">
     <link rel="manifest" href="res/logo/favicon/site.webmanifest">
-    <link rel="mask-icon" href="res/logo/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="mask-icon" href="res/logo/favicon/safari-pinned-tab.svg" color="#623582">
+    <meta name="msapplication-TileColor" content="#89023E">
+    <meta name="theme-color" content="#fafafa">
     <link rel="stylesheet" href="css/style.css">
     <title>Pink Lotus</title>
 
