PL> Add css for button and sections
PL> Add css for button and sections

--- a/index.html
+++ b/index.html
@@ -18,8 +18,49 @@
     <title>Pink Lotus</title>
 
 </head>
-<body>
-<h1 class="heading-text text-color-pink-2">Pink Lotus</h1>
-<p>Define your style ...</p>
+<body class="container">
+<div class="sidebar">Sidebar</div>
+<header class="header">
+    <div class="header__picture">
+        HEader Picture
+    </div>
+    <div class="header__content">
+        Header Content
+    </div>
+</header>
+<section class="section best-sellers">
+    Top BestSellers
+</section>
+<section class="section features">
+    Features
+</section>
+<section class="section banner">
+    Banner
+</section>
+<section class="section real-deals">
+    Real deals
+</section>
+<section class="section top-categories">
+    Top categories
+</section>
+<section class="section our-favourites">
+    Our Favourites
+</section>
+<section class="section dermatologists">
+    Dermatologists
+</section>
+<section class="section mobile-app">
+    Mobile App
+</section>
+<section class="section reviews">
+    Reviews
+</section>
+<section class="section gallery">
+    Gallery
+</section>
+<footer class="footer section">
+    Footer
+</footer>
+<button class="btn btn--grey">Hello</button>
 </body>
 </html>
