PL>Add basic css grid
PL>Add basic css grid

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="sidebar">Sidebar</div>
 <header class="header">
     <div class="header__picture">
-        HEader Picture
+        Header Picture
     </div>
     <div class="header__content">
         Header Content
@@ -52,8 +52,9 @@
 <section class="section mobile-app">
     Mobile App
 </section>
-<section class="section reviews">
-    Reviews
+<section class="reviews">
+    <div class="sub_section reviews__picture">Picture</div>
+    <div class="sub_section reviews__story">Story</div>
 </section>
 <section class="section gallery">
     Gallery
@@ -61,6 +62,5 @@
 <footer class="footer section">
     Footer
 </footer>
-<button class="btn btn--grey">Hello</button>
 </body>
 </html>
