--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="msapplication-TileColor" content="#89023E">
     <meta name="theme-color" content="#fafafa">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <title>Pink Lotus</title>
 
 </head>
@@ -29,7 +31,13 @@
     </div>
 </header>
 <section class="section best-sellers">
-    Top BestSellers
+    <div class="slider best_sellers__carousel">
+        <h1>Hello</h1>
+        <h1>Hi</h1>
+        <h1>knfdl</h1>
+        <h1>Heew</h1>
+        <h1>Hwerw</h1>
+    </div>
 </section>
 <section class="section features">
     Features
@@ -63,4 +71,23 @@
     Footer
 </footer>
 </body>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.best_sellers__carousel').slick({
+            dots: true,
+            infinite: true,
+            speed: 500,
+            fade: true,
+            cssEase: 'linear',
+            autoplay: false,
+            slidesToShow: 3,
+            slidesToScroll : 1,
+            lazyLoad: 'ondemand',
+            focusOnSelect: true
+        });
+    });
+</script>
 </html>
