PL> Make the css grid responsive

--- a/index.html
+++ b/index.html
@@ -30,46 +30,68 @@
         Header Content
     </div>
 </header>
-<section class="section best-sellers">
-    <div class="slider best_sellers__carousel">
-        <h1>Hello</h1>
-        <h1>Hi</h1>
-        <h1>knfdl</h1>
-        <h1>Heew</h1>
-        <h1>Hwerw</h1>
-    </div>
+<section class="container best-sellers-container">
+    <section class="section best-sellers">
+        <div class="slider best_sellers__carousel">
+            <h1>Hello</h1>
+            <h1>Hi</h1>
+            <h1>knfdl</h1>
+            <h1>Heew</h1>
+            <h1>Hwerw</h1>
+        </div>
+    </section>
 </section>
-<section class="section features">
-    Features
+<section class="section-container features-container">
+    <section class="section features">
+        Features
+    </section>
 </section>
-<section class="section banner">
-    Banner
+<section class="section-container banner-container">
+    <section class="section banner">
+        Banner
+    </section>
 </section>
-<section class="section real-deals">
-    Real deals
+<section class="section-container real-deals-container">
+    <section class="section real-deals">
+        Real deals
+    </section>
 </section>
-<section class="section top-categories">
-    Top categories
+<section class="section-container top-categories-container">
+    <section class="section top-categories">
+        Top categories
+    </section>
 </section>
-<section class="section our-favourites">
-    Our Favourites
+<section class="section-container favourites-container">
+    <section class="section our-favourites">
+        Our Favourites
+    </section>
 </section>
-<section class="section dermatologists">
-    Dermatologists
+<section class="section-container dermatologists-container">
+    <section class="section dermatologists">
+        Dermatologists
+    </section>
 </section>
-<section class="section mobile-app">
-    Mobile App
+<section class="section-container mobile-app-container">
+    <section class="section mobile-app">
+        Mobile App
+    </section>
 </section>
-<section class="reviews">
-    <div class="sub_section reviews__picture">Picture</div>
-    <div class="sub_section reviews__story">Story</div>
+<section class="section-container reviews-container">
+    <section class="reviews">
+        <div class="sub_section reviews__picture">Picture</div>
+        <div class="sub_section reviews__story">Story</div>
+    </section>
 </section>
-<section class="section gallery">
-    Gallery
+<section class="section-container gallery-container">
+    <section class="section gallery">
+        Gallery
+    </section>
 </section>
-<footer class="footer section">
-    Footer
-</footer>
+<section class="section-container footer-container">
+    <footer class="footer section">
+        Footer
+    </footer>
+</section>
 </body>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -84,7 +106,7 @@
             cssEase: 'linear',
             autoplay: false,
             slidesToShow: 3,
-            slidesToScroll : 1,
+            slidesToScroll: 1,
             lazyLoad: 'ondemand',
             focusOnSelect: true
         });
